MM: :memo: Add documentation

--- a/src/maumau.tex
+++ b/src/maumau.tex
@@ -27,11 +27,12 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{insDLJS}[]{JSDateiname}{Maumau}
 
-const GAME_DESC = "Text.\
-Text.\
-Text.\
-Text.\
-Text.";
+const GAME_DESC = "Mau mau is a simple card game.\
+The goal of each player is to get rid of all his or her cards.\
+Each turn the player is allowed to play one card.\
+This card needs to fit on the currently shown card in the center.\
+To fit a card must have either the same number or the same symbol.\
+Furthermore there are multiple special rules that can be enabled.";
 
 % Outside variables
 const CARD_COUNT = AFMakeNumber(\cards);
@@ -59,6 +60,7 @@ const CANVAS_WIDTH = CANVAS_LTRB[RIGHT] - CANVAS_LTRB[LEFT];
 const CANVAS_CENTER_H = CANVAS_HEIGHT * 0.5 + CANVAS_LTRB[BOT];
 const CANVAS_CENTER_W = CANVAS_WIDTH * 0.5 + CANVAS_LTRB[LEFT];
 
+% Positioning data
 const CARD_WIDTH = 20;
 const STACK_POS = [CANVAS_CENTER_W - CARD_WIDTH * 1.25, CANVAS_CENTER_H];
 const GRAVE_POS = [CANVAS_CENTER_W + CARD_WIDTH * 1.25, CANVAS_CENTER_H];
@@ -72,6 +74,7 @@ const COLOR_POS = [
     [CANVAS_CENTER_W + CARD_WIDTH * 1.25, CANVAS_CENTER_H - CARD_WIDTH * 2.5 * 2.0]
 ];
 
+% Positions of player cards, left aligned
 const PLAYER_POS = [
     [CANVAS_LTRB[LEFT] + CARD_WIDTH * 2.0, CANVAS_LTRB[BOT] + CARD_WIDTH],
     [CANVAS_LTRB[LEFT] + CARD_WIDTH, CANVAS_LTRB[BOT] + CARD_WIDTH * 2.0],
@@ -80,17 +83,16 @@ const PLAYER_POS = [
 ];
 
 % Globals
-% TODO
+% The interval used for shuffling and distributing the cards of the stack
 var gameInterval;
-
+% Card animation data
 var cardAnim = {
     state: -1.0,
     start: [],
     goal: [],
     idx: 0,
-    interval: 0
+    interval: 0 % The interval used for the card animation
 }
-
 % Saves the index of the currently used card
 var curCardIdx = -1;
 % The playercount is read from the gui
@@ -99,7 +101,7 @@ var playerCount = 0;
 var cardsPerPlayer = 0;
 % Saves which turn it is
 var curPlayer = 0;
-% Player cards
+% Lists of player cards
 var playerCards = [
     [], [], [], []
 ];
@@ -107,7 +109,7 @@ var playerCards = [
 % The first two slots are padding to allow the use of the cardOwner index
 var rotations = [0, 0, 0, 270, 180, 90];
 
-% Information about the gamestate and special rules
+% Information about the game state and special rules
 var gameState = {
     gameover: true,
     skip8: false,
@@ -119,7 +121,6 @@ var gameState = {
 };
 
 % Spades, clubs, hearts, diamonds
-% const CARD_COLORS = ["S", "C", "H", "D"];
 const CARD_COLORS = [
     String.fromCharCode(0x2660),
     String.fromCharCode(0x2663),
@@ -128,21 +129,26 @@ const CARD_COLORS = [
 ];
 
 const CARD_VALUES = ["7", "8", "9", "10", "J", "Q", "K", "A"];
+% A list of all cards, each being a combination of card color and value
 const CARDS = [];
-
-var graveyard = [];
-var stack = [];
-
-const STACK = -1;
-const GRAVEYARD = -2;
-var cardOwner = [];
-
 for (var col = 0; col < CARD_COLORS.length; col++) {
     for (var val = 0; val < CARD_VALUES.length; val++) {
         CARDS.push(CARD_VALUES[val] + CARD_COLORS[col]);
     }
 }
 
+% A list of all played cards
+var graveyard = [];
+% A list of all cards that are available to be drawn
+var stack = [];
+
+const STACK = -1;
+const GRAVEYARD = -2;
+% A list with an index representing the owner of each card
+var cardOwner = [];
+
+% Rule object saving the currently active rules
+% Origin: https://en.wikipedia.org/wiki/Mau-Mau_(card_game)
 var rules = {
     cb7: true,
     cb7chain: true,
@@ -158,6 +164,7 @@ var rules = {
     cbAskip: false
 };
 
+% Color for the backside of the cards
 % const BACK_COLOR = [ "RGB", 0.313, 0.525, 0.560 ];
 const BACK_COLOR = [ "RGB", 0.047, 0.349, 0.047 ];
 
@@ -182,18 +189,19 @@ function initialise() {
     % Init the GUI
     initialiseButtons();
 
-    % Init unused cards
+    % Push all cards to the graveyard
     for (var i = 0; i < CARD_COUNT; i++) {
         graveyard.push(i);
     }
     for (var i = 0; i < CARD_COUNT; i++) {
-        % Get random element from the  and remove the card afterwards
+        % Get random card from the graveyard, remove it and push it on top of the stack
         var rnd = getRandomInt(graveyard.length);
         stack.push(graveyard[rnd]);
         cardOwner.push(STACK);
         graveyard.splice(rnd, 1);
     }
 
+    % Start the card distribution
     curCardIdx = stack.length - 1;
     gameInterval = app.setInterval("initStack()", ANIMATION_SPEED);
 }
@@ -206,7 +214,7 @@ function initialiseButtons() {
     % Disables the rectangle around a button after the click
     app.focusRect = false;
 
-    % Init player count
+    % Read player count from gui
     var cmP = this.getField("cmPlayer");
     cmP.checkThisBox(2);
     playerCount = 0;
@@ -214,13 +222,14 @@ function initialiseButtons() {
         playerCount += cmP.isBoxChecked(i) * (2 + i);
     };
 
-    % Init cards per player count
+    % Read cards per player count from gui
     var cmC = this.getField("cmCards");
     cmC.checkThisBox(1);
     for (var i = 0; i < 5; i++) {
         cardsPerPlayer += cmC.isBoxChecked(i) * (4 + i);
     };
 
+    % Assign each card a callback and initialize the correct font etc
     for (var c = 0; c < CARDS.length; c++) {
         var callbackName = "chooseCard(" + c.toString() + ");";
         var card = this.getField("card" + c);
@@ -235,7 +244,7 @@ function initialiseButtons() {
         card.delay = false;
     }
 
-    % Skip button
+    % Add skip button
     var skipRect = [
         SKIP_POS[X] - CARD_WIDTH - CARD_WIDTH * 1.25,
         SKIP_POS[Y] + CARD_WIDTH,
@@ -244,7 +253,7 @@ function initialiseButtons() {
     ];
     addButton("skip", "skip();", skipRect, "Skip turn", false, TEXT_SIZE_SMALL);
 
-    % The current color box
+    % Add current color box
     var colorRect = [
         CUR_COLOR_POS[X] - CARD_WIDTH,
         CUR_COLOR_POS[Y] + CARD_WIDTH,
@@ -253,7 +262,7 @@ function initialiseButtons() {
     ];
     addButton("curcolor", "", colorRect, gameState.currentColor, false, TEXT_SIZE_BIG);
 
-    % Color buttons
+    % Add color selection buttons
     for (var col = 0; col < CARD_COLORS.length; col++) {
         colorRect = [
             COLOR_POS[col][X] - CARD_WIDTH,
@@ -292,11 +301,13 @@ function initialiseButtons() {
  * Restart the game and clear everything
  */
 function restart() {
+    % While an animation is running disable restart
     if (curCardIdx > -1 || cardAnim.state > -0.1) {
         printInfoText("Can not restart until the animation finished.");
         return;
     }
 
+    % Reset current gamestate
     gameState = {
         gameover: true,
         skip8: false,
@@ -307,14 +318,15 @@ function restart() {
         direction: 1
     };
 
+    % Reset player data
     curPlayer = 0;
     playerCards = [
         [], [], [], []
     ];
 
+    % Update stack and graveyard by deleting all contents and reshuffle all cards to the stack
     graveyard = [];
     stack = [];
-
     for (var i = 0; i < CARD_COUNT; i++) {
         graveyard.push(i);
     }
@@ -326,19 +338,20 @@ function restart() {
         graveyard.splice(rnd, 1);
     }
 
+    % Hide all cards, otherwise they would stay at their last position until they are updated
     for (var c = 0; c < CARDS.length; c++) {
         var card = this.getField("card" + c);
         card.hidden = true;
     }
 
-    % Init player count
+    % Read player count from gui
     var cmP = this.getField("cmPlayer");
     playerCount = 0;
     for (var i = 0; i < 3; i++) {
         playerCount += cmP.isBoxChecked(i) * (2 + i);
     };
 
-    % Init cards per player count
+    % Read cards per player count from gui
     cardsPerPlayer = 0;
     var cmC = this.getField("cmCards");
     for (var i = 0; i < 5; i++) {
@@ -353,6 +366,7 @@ function restart() {
         rules[cbKeys[idx]] = cb.isBoxChecked(0) == 1;
     }
 
+    % Check that there are cards to distribute (should always be the case)
     if (cardsPerPlayer > 0) {
         curCardIdx = stack.length - 1;
         gameInterval = app.setInterval("initStack()", ANIMATION_SPEED);
@@ -403,11 +417,15 @@ function tooltip(on) {
 %%%%%%%%%%%%%
 % Gamelogic %
 %%%%%%%%%%%%%
-% 1. Drop cards
-% 2. Deploy cards
-% 3. Open first card
-% 4.1 if card on hand is clicked play it
-% 4.2 if card on stack is clicked take it
+/**
+ * Chooses and processes the card that was clicked on.
+ * This results in either the top card from the stack being drawn
+ * or the selected card is played and put onto the graveyard.
+ * If the stack is empty the cards from the graveyard are used to refill it.
+ * Also processes special rules, like skipping or color selection.
+ *
+ * @param {Number} cardIdx The index of the clicked on card.
+ */
 function chooseCard(cardIdx) {
     this.getField("tooltiptxt").setFocus();
 
@@ -416,34 +434,38 @@ function chooseCard(cardIdx) {
         return;
     }
 
+    % Do not process the selected card if the special rules disallow it
     if (!specialRulesBegin(cardIdx)) {
         return;
     }
 
     % Player draws a card
     if (cardOwner[cardIdx] == STACK) {
+        % Assign card to the player and update cardowner
         var card = this.getField("card" + stack[0]);
         cardOwner[stack[0]] = curPlayer;
         playerCards[curPlayer].push(stack[0]);
 
-        % Draw animation
+        % Setup draw card animation
         card.hidden = true;
         cardAnim.start = card.rect;
         cardAnim.idx = stack[0];
-
+        % Update current card positions
         redrawPlayerCards(curPlayer);
-
         cardAnim.state = 1.0;
         cardAnim.goal = card.rect;
+        % Start draw card animation
         cardAnim.interval = app.setInterval("moveCard()", ANIMATION_SPEED * 1.25);
-
+        % Remove card from stack
         stack.splice(0, 1);
 
         printInfoText("Player " + (curPlayer + 1) + " took a card!");
-
+        % Check for special rules (for example take 2)
         specialRulesDraw();
-
-    } else if (cardOwner[cardIdx] > STACK) {
+    }
+    % Player wants to play the selected card
+    else if (cardOwner[cardIdx] > STACK) {
+        % Check if the card belongs to the current player
         if (cardOwner[cardIdx] != curPlayer) {
             printInfoText(
                 "Its not your turn Player " + (cardOwner[cardIdx] + 1) + "!" +
@@ -451,6 +473,7 @@ function chooseCard(cardIdx) {
             return;
         }
 
+        % If the card does not match to the last played card reject the input
         if (!validMove(cardIdx)) {
             printInfoText("This is not a valid move, select another card!");
             return;
@@ -460,7 +483,7 @@ function chooseCard(cardIdx) {
         var cVal = CARDS[cardIdx];
         gameState.currentColor = cVal.charAt(cVal.length - 1);
 
-        % Hide last top card
+        % Hide last top graveyard card to disable overdrawing
         var tmpIdx = graveyard[graveyard.length - 1];
         var topCard = this.getField("card" + tmpIdx);
         topCard.hidden = true;
@@ -471,6 +494,7 @@ function chooseCard(cardIdx) {
         const index = playerCards[curPlayer].indexOf(cardIdx);
         playerCards[curPlayer].splice(index, 1);
 
+        % Update card position
         var card = this.getField("card" + cardIdx);
         card.delay = true;
         card.rect = [
@@ -482,9 +506,11 @@ function chooseCard(cardIdx) {
         card.delay = false;
 
         this.getField("curcolor").value = gameState.currentColor;
+        % Reveal top side of the card and update the player cards (one slot removed)
         drawCardFront(cardIdx);
         redrawPlayerCards(curPlayer);
 
+        % Check for a winner
         if (playerCards[curPlayer].length <= 0) {
             gameState.gameover = true;
             printInfoText("Player " + (curPlayer + 1) + " has no cards left and won the game!");
@@ -492,7 +518,7 @@ function chooseCard(cardIdx) {
         } else {
             printInfoText("Player " + (curPlayer + 1) + " played the card " + cVal + "!");
         }
-
+        % Check if the played card has a special rule
         specialRulesPlay(cardIdx);
     } else {
         return;
@@ -507,17 +533,30 @@ function chooseCard(cardIdx) {
             graveyard.splice(rnd, 1);
         }
         curCardIdx = stack.length - 1;
+        % Start stack animation
         gameInterval = app.setInterval("initStack()", ANIMATION_SPEED);
     }
 
+    % Hide the cards of the current player and reveal them for the next player
     nextPlayer();
     showCurHidePrev();
 }
 
+/**
+ * Check if the selected card matches onto the top graveyard card.
+ * For this either color or number must match.
+ * There might be special rules active like:
+ * 9 can be placed on every other card and
+ * J can not be placed on another J.
+ *
+ * @param {Number} cardIdx The card to test.
+ */
 function validMove(cardIdx) {
     const topGraveIdx = graveyard[graveyard.length - 1];
     const c1 = CARDS[topGraveIdx];
     const c2 = CARDS[cardIdx];
+    % Since not every card is two characters in length (10)
+    % the test is done from the back of the card name
     const l1 = c1.length;
     const l2 = c2.length;
 
@@ -536,11 +575,18 @@ function validMove(cardIdx) {
     return false;
 }
 
+/**
+ * Skips the turn of the current player.
+ * This is only allowed after the previous player played an eight or
+ * the stack is empty.
+ */
 function skip() {
     if (gameState.skip8) {
         printInfoText("Player " + (curPlayer + 1) + " was skipped.");
         nextPlayer();
         showCurHidePrev();
+        % Disable skipping for the eight ontop of the graveyard,
+        % otherwise following player could all skip until another card is played
         gameState.skip8 = false;
     } else if (stack.length == 0) {
         printInfoText("Player " + (curPlayer + 1) + " was skipped.");
@@ -551,6 +597,14 @@ function skip() {
     }
 }
 
+/**
+ * Assigns the selected color as the color to currently be played.
+ * This is only possible with the select color rule and after playing a J.
+ * This overrides the color of the played card until a new card is played.
+ * The color selection buttons are hidden after selection.
+ *
+ * @param {Number} colorIdx The index of the selected color.
+ */
 function selectColor(colorIdx) {
     gameState.selectColor = false;
     gameState.currentColor = CARD_COLORS[colorIdx];
@@ -565,7 +619,17 @@ function selectColor(colorIdx) {
     }
 }
 
-% Rules: https://en.wikipedia.org/wiki/Mau-Mau_(card_game)
+/**
+ * Since there might be special rules selected, a function a the start of each turn
+ * and at the end are needed to check for special cases. These are processed here.
+ * Examples:
+ * Check if player wants to chain 7s or Ks.
+ * Check if player wants to or must take cards after a 7 or K.
+ * Check if player wants to chain 8s.
+ * Checks if a player still need to select a new color after playing J.
+ *
+ * @param {Number} cardIdx The selected card.
+ */
 function specialRulesBegin(cardIdx) {
     % Get top card value (graveyard card)
     const gC = CARDS[graveyard[graveyard.length - 1]];
@@ -608,6 +672,7 @@ function specialRulesBegin(cardIdx) {
         }
     }
 
+    % If the player still needs to select a color
     if (gameState.selectColor) {
         printInfoText("Player " + (curPlayer + 1) + ", still needs to select a color!");
         return false;
@@ -615,12 +680,27 @@ function specialRulesBegin(cardIdx) {
     return true;
 }
 
+/**
+ * Process special rules at the end of a draw turn.
+ * Allows for drawing multiple times when taking due to 7 or K.
+ */
 function specialRulesDraw() {
     if (gameState.take > 0) {
         prevPlayer();
     }
 }
 
+/**
+ * Process special rules at the end of a play turn.
+ * For example:
+ * Adjusting take count after 7 or K.
+ * Mark next turn as skipped after 8 or A.
+ * Change playing direction after 10.
+ * Show color selection gui after J.
+ * Player gets another turn after A.
+ *
+ * @param {Number} cardIdx The selected card.
+ */
 function specialRulesPlay(cardIdx) {
     % Get top card value
     const c = CARDS[cardIdx];
@@ -652,7 +732,7 @@ function specialRulesPlay(cardIdx) {
         gameState.selectColor = true;
         printInfoText("Player " + (curPlayer + 1) + " please select a color.");
         prevPlayer();
-        % Unhide color selection buttons
+        % Reveal color selection buttons
         for (var col = 0; col < CARD_COLORS.length; col++) {
             this.getField("color" + col).hidden = false;
         }
@@ -675,59 +755,52 @@ function specialRulesPlay(cardIdx) {
     }
 }
 
-function openFirstCard() {
-    cardOwner[stack[0]] = GRAVEYARD;
-    graveyard.push(stack[0]);
-    var card = this.getField("card" + stack[0]);
-    card.delay = true;
-    card.rect = [
-        GRAVE_POS[X] - CARD_WIDTH,
-        GRAVE_POS[Y] + CARD_WIDTH,
-        GRAVE_POS[X] + CARD_WIDTH,
-        GRAVE_POS[Y] - CARD_WIDTH
-    ];
-    card.delay = false;
-
-    drawCardFront(stack[0]);
-    var cVal = CARDS[stack[0]];
-    gameState.currentColor = cVal.charAt(cVal.length - 1);
-    % Show current color
-    this.getField("curcolor").value = gameState.currentColor;
-    stack.splice(0, 1);
-
-    showCurHidePrev();
-    gameState.gameover = false;
-    printInfoText("The game has started. Player " + (curPlayer + 1) + " your Turn.");
-}
-
+/**
+ * Advance the player index.
+ * Is able to respond in changes in the playing direction.
+ */
 function nextPlayer() {
     curPlayer = (curPlayer + gameState.direction + playerCount) \% playerCount;
 }
 
+/**
+ * Decrease the player index.
+ * Is able to respond in changes in the playing direction.
+ */
 function prevPlayer() {
     curPlayer = (curPlayer - gameState.direction + playerCount) \% playerCount;
 }
 
-%%%%%%%%%%%%%%%%%%%%%
-% Draw and coloring %
-%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+% Distribute, move and draw cards %
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+/**
+ * Initializes the stack by moving one card to the stack position.
+ * Is used inside an interval which is cleared when no cards are left
+ * to put on the stack. The card that is moved is selected by the
+ * current value of the curCardIdx. All card positions are slightly offset,
+ * to simulate the appearance of a real card pile.
+ * For all cards the backside is drawn.
+ * Also starts the interval for hand card distribution when the game is over.
+ */
 function initStack() {
+    % Clear the interval and start hand card distribution unless the game is not over
     if (curCardIdx < 0) {
         app.clearInterval(gameInterval);
 
         if (gameState.gameover) {
+            % Distribute as many cards to the players as possible
             gameInterval = app.setInterval("initHandCards()", ANIMATION_SPEED * 3.0);
             curCardIdx = Math.min(playerCount * cardsPerPlayer - 1, CARD_COUNT - 2);
         }
         return;
     }
 
+    var offset = [-5 + getRandomInt(11), -5 + getRandomInt(11)];
+    % Get card, reveal it and adjust position
     var idx = stack[curCardIdx];
     var card = this.getField("card" + idx);
     card.hidden = false;
-
-    var offset = [-5 + getRandomInt(11), -5 + getRandomInt(11)];
-
     card.rect = [
         STACK_POS[X] - CARD_WIDTH + offset[X],
         STACK_POS[Y] + CARD_WIDTH + offset[Y],
@@ -740,11 +813,19 @@ function initStack() {
     curCardIdx--;
 }
 
+/**
+ * Initializes the hand cards of all players.
+ * Is used inside an interval which is cleared when no cards are left.
+ * Each time a card is distributed an animation is started moving the
+ * card from the stack to the player position.
+ */
 function initHandCards() {
+    % Check if animation has finished
     if (cardAnim.state > -0.1) {
         return;
     }
 
+    % Clear interval after distributing all cards
     if (curCardIdx < 0) {
         app.clearInterval(gameInterval);
 
@@ -754,57 +835,95 @@ function initHandCards() {
         return;
     }
 
+    % Update owner and player cards
     cardOwner[stack[0]] = curPlayer;
     playerCards[curPlayer].push(stack[0]);
 
-    % Draw animation
+    % Setup draw card animation
     var card = this.getField("card" + stack[0]);
     card.hidden = true;
     cardAnim.start = card.rect;
     cardAnim.idx = stack[0];
+    % Update current card positions
     redrawPlayerCards(curPlayer);
     cardAnim.state = 1.0;
     cardAnim.goal = card.rect;
+    % Start draw card animation
     cardAnim.interval = app.setInterval("moveCard()", ANIMATION_SPEED * 1.25);
-
+    % Remove card from stack
     stack.splice(0, 1);
     nextPlayer();
 
     curCardIdx--;
 }
 
+/**
+ * Reveal the first graveyard card after shuffling the deck and distributing the cards.
+ * Pushes the top stack card onto the graveyard.
+ */
+function openFirstCard() {
+    cardOwner[stack[0]] = GRAVEYARD;
+    graveyard.push(stack[0]);
+    % Update position
+    var card = this.getField("card" + stack[0]);
+    card.delay = true;
+    card.rect = [
+        GRAVE_POS[X] - CARD_WIDTH,
+        GRAVE_POS[Y] + CARD_WIDTH,
+        GRAVE_POS[X] + CARD_WIDTH,
+        GRAVE_POS[Y] - CARD_WIDTH
+    ];
+    card.delay = false;
+
+    % Reveal front of the card
+    drawCardFront(stack[0]);
+    var cVal = CARDS[stack[0]];
+    % Get and show beginning color
+    gameState.currentColor = cVal.charAt(cVal.length - 1);
+    this.getField("curcolor").value = gameState.currentColor;
+    stack.splice(0, 1);
+
+    % Reveal first player
+    showCurHidePrev();
+    gameState.gameover = false;
+    printInfoText("The game has started. Player " + (curPlayer + 1) + " your Turn.");
+}
+
+%%%%%%%%%%%
+% Drawing %
+%%%%%%%%%%%
+/**
+ * Shows the cards (front) of the current player and
+ * hides the cards (back) of the last active player.
+ */
 function showCurHidePrev() {
+    % Show frontside (reveal)
     for (var c = 0; c < playerCards[curPlayer].length; c++) {
         drawCardFront(playerCards[curPlayer][c]);
     }
+    % Show backside (hide)
     var prevPlayer = (curPlayer - gameState.direction + playerCount) \% playerCount;
     for (var c = 0; c < playerCards[prevPlayer].length; c++) {
         drawCardBack(playerCards[prevPlayer][c]);
     }
 }
 
-function drawCardFront(cardIdx) {
-    var card = this.getField("card" + cardIdx);
-    card.delay = true;
-    card.fillColor = color.white;
-    card.value = CARDS[cardIdx];
-    card.rotation = rotations[cardOwner[cardIdx] + 2];
-    card.delay = false;
-}
-
-function drawCardBack(cardIdx) {
-    var card = this.getField("card" + cardIdx);
-    card.delay = true;
-    card.fillColor = BACK_COLOR;
-    card.value = "";
-    card.delay = false;
-}
-
+/**
+ * Updates the card positions of the selected player.
+ * This is used after drawing or playing a card, since then
+ * the area for each card changes and they need to be re-positioned.
+ * The area for each card is dependent on the cardamount and the complete areawidth.
+ *
+ * @param {Number} pIdx The player index.
+ */
 function redrawPlayerCards(pIdx) {
+    % Sort the cards for the nicer looks
     playerCards[pIdx].sort(function(a, b) {
         return a - b;
     });
 
+    % Calculate the space each card has, resulting in shrinking cards
+    % when the space does not allow to use the predefined card width
     var perCardH = (CANVAS_HEIGHT - CARD_WIDTH * 4.0) / playerCards[pIdx].length;
     var perCardW = (CANVAS_WIDTH - CARD_WIDTH * 4.0) / playerCards[pIdx].length;
     var cardWidth = Math.min(CARD_WIDTH, perCardH * 0.5 - 2);
@@ -812,12 +931,13 @@ function redrawPlayerCards(pIdx) {
         cardWidth = Math.min(CARD_WIDTH, perCardW * 0.5 - 2);
     }
 
+    % Iterate all player cards
     for (var c = 0; c < playerCards[pIdx].length; c++) {
-        var pos = playerCards[pIdx].length * 0.5 - c;
-
         var cardIdx = playerCards[pIdx][c];
         var card = this.getField("card" + cardIdx);
         card.delay = true;
+        % Depending on the player the cards need to be aligned top, bot, left or right
+        % The PLAYER_POS are left/bot aligned allowing to increase the position depending on c
         if (pIdx \% 2 == 0) {
             card.rect = [
                 PLAYER_POS[pIdx][X] - cardWidth + c * perCardW + perCardW * 0.5,
@@ -834,12 +954,49 @@ function redrawPlayerCards(pIdx) {
             ];
         }
         card.delay = false;
-
-        %drawCardFront(cardIdx);
     }
 }
 
+/**
+ * Drawmode for the front side. In reality the textelements do not have
+ * multiple sides therefore two states are needed in which the visualisation changes.
+ * The frontside changes the color to white, rotates the field if necessary and
+ * add the value of the selected card.
+ *
+ * @param {Number} cardIdx The selected card.
+ */
+function drawCardFront(cardIdx) {
+    var card = this.getField("card" + cardIdx);
+    card.delay = true;
+    card.fillColor = color.white;
+    card.value = CARDS[cardIdx];
+    card.rotation = rotations[cardOwner[cardIdx] + 2];
+    card.delay = false;
+}
+
+/**
+ * Drawmode for the back side. In reality the textelements do not have
+ * multiple sides therefore two states are needed in which the visualisation changes.
+ * The backside changes the color and removes the value.
+ *
+ * @param {Number} cardIdx The selected card.
+ */
+function drawCardBack(cardIdx) {
+    var card = this.getField("card" + cardIdx);
+    card.delay = true;
+    card.fillColor = BACK_COLOR;
+    card.value = "";
+    card.delay = false;
+}
+
+/**
+ * Move the card (cardAnim.idx) from the start position (cardAnim.start) to
+ * the goal position (cardAnim.goal), by linear interpolation.
+ * This is used with an interval to gradually change the position.
+ * When the goal is reached the interval is cleared.
+ */
 function moveCard() {
+    % Clear interval when goal is reached
     if (cardAnim.state < -0.2) {
         app.clearInterval(cardAnim.interval);
         return;
@@ -848,6 +1005,7 @@ function moveCard() {
     var card = this.getField("card" + cardAnim.idx);
     card.hidden = false;
 
+    % Interpolate positions
     var rect = [0, 0, 0, 0];
     for (var i = 0; i < 4; i++) {
         rect[i] = Math.max(cardAnim.state, 0.0) * cardAnim.start[i] +
@@ -859,6 +1017,16 @@ function moveCard() {
     cardAnim.state -= 0.05;
 }
 
+/**
+ * Utility function.
+ * Adds a button to the gui using the given parameter.
+ * @param {String} name The field name.
+ * @param {String} callback The function called on mouseup.
+ * @param {Array} rect The field position.
+ * @param {String} value The field value.
+ * @param {Boolean} hidden Should the field be hidden.
+ * @param {Number} tsize The text size.
+ */
 function addButton(name, callback, rect, value, hidden, tsize) {
     var btn = this.getField(name);
     btn.delay = true;
@@ -909,18 +1077,20 @@ function printInfoText(text) {
         \end{multicols}
 
         \begin{tcolorbox}[height=\linewidth, valign=center]
+            % The playing cards
             \xintFor* #1 in {\xintSeq{0}{\cards-1}} \do {%
                 \TextField[name=card#1, width=1cm, height=1cm,%
                     bordercolor=black, backgroundcolor=white, readonly=true, hidden%
                 ]{}%
             }%
 
+            % Field to show the currently active color
             \TextField[name=curcolor, width=1cm, height=1cm,%
                 bordercolor=, backgroundcolor=, readonly=true, hidden]{}%
-
+            % Skip button to skip a turn
             \TextField[name=skip, width=1cm, height=1cm,%
                 bordercolor=black, backgroundcolor=white, readonly=true, hidden]{}%
-
+            % For each color a button to allow for color selection
             \xintFor* #1 in {\xintSeq{0}{\colors-1}} \do {%
                 \TextField[name=color#1, width=1cm, height=1cm,%
                     bordercolor=black, backgroundcolor=white, readonly=true, hidden%
@@ -934,11 +1104,6 @@ function printInfoText(text) {
         % Commandredifinition %
         % https://www.dickimaw-books.com/latex/admin/html/eforms.shtml
         %%%%%%%%%%%%%%%%%%%%%%%
-        % \def\DefaultHeightofText{14pt}
-        % \renewcommand*{\LayoutTextField}[2]{%
-        %     \parbox[c][\DefaultHeightofText]{0.5\linewidth}{#1#2}%
-        % }
-
         \renewcommand*{\LayoutCheckField}[2]{#2 #1}
         \renewcommand*{\DefaultWidthofCheckBox}{2ex}
         \renewcommand*{\DefaultHeightofCheckBox}{2ex}
@@ -976,6 +1141,7 @@ function printInfoText(text) {
         \ChoiceMenu[name=cmCards, bordercolor=gray, radiosymbol=5, radio]
             {Player card count: }{4, 5, 6, 7, 8}
 
+        % Gui options for special rules like, take 2, skip, choose color, ...
         \begin{center}
             \begin{tabularx}{\textwidth}{@{} X X @{}}
                 \CheckBox[name=cb7, bordercolor=gray, checkboxsymbol=5]{7: take 2} &%
